# GeoLib

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  build.sh  homework10.ipynb
.github/workflows/: ci.yml
include/: geo.h  geo_2d.h  geo_base.h
src/: geo_2d.cc  geo_3d.cc  geo_base.cc
tests/: CMakeLists.txt  tests.cc  tests.cpp
